# back-end

./: .aiexclude  .dockerignore  .env  .env.example  .env.production   .env.test  .env.testing  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANUAL_DE_USO_API.md  README.md  ROADMAP-TEST.md  ROADMAP.md  alembic.ini  data-202625155211.json  database.Dockerfile  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  init.sql  main.py  openapi.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  test-entrypoint.sh  test.md  unlock_user.py
.github/workflows/: ci.yml
.husky/: pre-commit
.sonarlint/: connectedMode.json
alembic/: env.py  script.py.mako  utils.py
alembic/versions/: 0001_create_timescaledb_extension.py  0002_create_identity_tables.py  0003_create_assets_tables.py  0004_create_telemetry_hypertable.py  0005_create_procurement_tables.py  0006_create_maintenance_tables.py  0007_create_core_engine_tables.py  0008_implement_rbac_and_sectors.py  0009_add_sector_and_properties_to_asset.py  0010_create_audit_log_table.py  0011_create_configuration_tables.py  (+35 more)
api_contracts/: alarming-api.md  assets-api.md  auth-api.md  configuration-api.md  notifications-api.md
app/: main.py
logs/: 2025-10-08.log.1
scripts/: add_password_column.sql  check_permissions.py  create_superuser.py  generate_i18n.py  manage_db.py  seed_all.py  seed_history.py  seed_saas.py
simulators/: modbus_simulator.py  plc_simulator.py
telemetry/: router.py  schemas.py
tests/: README.md  conftest.py
(+272 files in other folders)
