[tool.poetry]
name = "astruxa-backend"
version = "0.1.0"
description = "Backend for Astruxa application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
# Las dependencias principales como fastapi, uvicorn, sqlalchemy, etc.
# se gestionarán aquí. Por ahora, nos centramos en las de desarrollo.

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

# --- CONFIGURACIÓN DE HERRAMIENTAS EXISTENTES ---

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
select = [
    "E", # Errores de estilo (PEP8)
    "W", # Advertencias (PEP8)
    "F", # Errores de Flake8
    "I", # isort
    "UP", # Actualizaciones
    "YTT", # Errores de comentarios
    "ANN", # Anotaciones
    "S", # Seguridad (bandit)
]
ignore = [
    "E501", # Longitud de línea (manejado por ruff, no por black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "strict"
